--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@babel/preset-env": "^7.0.0",
     "@babel/register": "^7.0.0",
     "arraybuffer-equal": "1.0.4",
-    "ava": "^2.4.0",
+    "ava": "^6.2.0",
     "babel-eslint": "^10.0.3",
     "eslint": "^6.8.0",
     "eslint-config-prettier": "^6.9.0",
@@ -27,7 +27,7 @@
     "prettier": "^1.19.1",
     "proxyquire": "^2.1.3",
     "sinon": "^8.0.2",
-    "sqlite3": "4.1.1"
+    "sqlite3": "^5.1.7"
   },
   "author": "ewnd9 <ewndnine@gmail.com>",
   "keywords": [
